--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "socket.io-client": "^1.4.5",
     "underscore": "^1.8.3",
     "xbox-controller": "^0.7.0"
+  },
+  "devDependencies": {
+    "keypress": "^0.2.1"
   }
 }
